--- a/public/design/back/default/_common/css/table.css
+++ b/public/design/back/default/_common/css/table.css
@@ -1,3 +1,5 @@
+@import url('ui-actions.css');
+
 /* •••••••••••••••••••••••••••••••••• */
 table.list {
     width: 100%;
@@ -52,42 +54,6 @@ table.list tbody tr td.picture img {
     width: 75px;
     height: 75px;
     overflow: hidden;
-}
-
-/* •••••••••••••••••••••••••••••••••• */
-
-table.list tbody tr td.actions a {
-    display: inline-block;
-    background-position: 0 0;
-    background-repeat: no-repeat;
-    width: 16px;
-    height: 16px;
-    overflow: hidden;
-    text-indent: -1000em;
-}
-
-table.list tbody tr td.actions a.delete {
-    background-image: url(../img/ui/delete.png);
-}
-
-table.list tbody tr td.actions a.putoffline {
-    background-image: url(../img/ui/putoffline.png);
-}
-
-table.list tbody tr td.actions a.putonline {
-    background-image: url(../img/ui/putonline.png);
-}
-
-table.list tbody tr td.actions a.moveup {
-    background-image: url(../img/ui/arrow_up.png);
-}
-
-table.list tbody tr td.actions a.movedown {
-    background-image: url(../img/ui/arrow_down.png);
-}
-
-table.list tbody tr td.actions a.update {
-    background-image: url(../img/ui/update.png);
 }
 
 /* •••••••••••••••••••••••••••••••••• */
