News Affichage front reste plus que peaufinnage

--- a/application/modules/front/views/scripts/news/list.phtml
+++ b/application/modules/front/views/scripts/news/list.phtml
@@ -10,7 +10,7 @@ $news = $this->news;
 $newsPerRow = 3; $i = 0;
 ?>
 
-<h2><?= _('HEAD_TITLE_NEWS'); ?></h2>
+<h2><?= _('NEWS_LIST_TITLE'); ?></h2>
 
 <?php if (count($spotlight) == 1): ?>
 <div class="spotlight">
