--- a/application/modules/front/views/scripts/news/read.phtml
+++ b/application/modules/front/views/scripts/news/read.phtml
@@ -13,7 +13,7 @@ $i = 0;
 
 
 <div class="news">
-    <a href="/news"><?= _('GLOBAL_BACK') ?></a>
+    <a href="<?= $this->baseUrl(); ?>news"><?= _('GLOBAL_BACK') ?></a>
     <h2><?= $news->title ?></h2>
 
     <div class="contenu"><?= $news->content ?></div>
