--- a/application/modules/front/views/scripts/partial/header.phtml
+++ b/application/modules/front/views/scripts/partial/header.phtml
@@ -1,5 +1,5 @@
 <h1>
-    <a href="<?php echo $this->baseUrl(); ?>">
+    <a href="<?= $this->baseUrl(); ?>">
         <?= _('GLOBAL_HEADER_TITLE'); ?>
     </a>
 </h1>
