--- a/public/design/front/default/news/css/list.css
+++ b/public/design/front/default/news/css/list.css
@@ -22,12 +22,14 @@
 #wrapper .spotlight .left h3 {
     margin-bottom: 15px;
     font-size: 2em;
+    font-weight: normal;
 }
 
 #wrapper .spotlight .right {
     width: 600px;
     text-align: justify;
     float: left;
+    font-weight: normal;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
@@ -52,13 +54,14 @@
     box-shadow: 0 0 5px #555;
 }
 
-#wrapper .news ul li.no-space{
-    margin-right:0;
+#wrapper .news ul li.no-space {
+    margin-right: 0;
 }
 
 #wrapper .news .left h3 {
     margin-bottom: 15px;
     font-size: 1.3em;
+    font-weight: normal;
 }
 
 #wrapper .news .left p {
@@ -75,6 +78,9 @@
 
 #wrapper .news .right {
     text-align: justify;
+    overflow: hidden;
+    height: 121px;
+    font-weight: normal;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
