--- a/application/modules/back/views/scripts/partial/menu.phtml
+++ b/application/modules/back/views/scripts/partial/menu.phtml
@@ -22,7 +22,7 @@ $items['news'] = array(
 );
 /** Liste des activités */
 $items['activities'] = array(
-    'controller' => 'activities-list',
+    'controller' => 'activities',
     'label'      => _('GLOBAL_MENU_ACTIVITIES'),
     'current'    => array('edit', 'index', 'list')
 );
