--- a/application/modules/front/views/scripts/news/list.phtml
+++ b/application/modules/front/views/scripts/news/list.phtml
@@ -13,50 +13,54 @@ $i = 0;
 
 <h2><?= _('NEWS_LIST_TITLE'); ?></h2>
 
-<?php if (count($spotlight) == 1): ?>
-<a href="<?= $this->baseUrl(); ?>news/read/id/<?= $spotlight->id; ?>">
-    <div class="spotlight">
-        <div class="left">
-            <h3>
-                <?= $spotlight->title; ?>
-            </h3>
-            <?php if (isset($spotlight->illustrations[0])): ?>
-            <img
-                src="<?=
-                    $this->displayImage(
-                        $spotlight->illustrations[0]->filename,
-                        Llv_Constant_File_Category::NEWS,
-                        300,
-                        9999
-                    );
-                    ?>"/>
-            <?php endif; ?>
+<?php if (count($spotlight) == 1 && count($news) > 0): ?>
+    <?php if (count($spotlight) == 1): ?>
+    <a href="<?= $this->baseUrl(); ?>news/read/id/<?= $spotlight->id; ?>">
+        <div class="spotlight">
+            <div class="left">
+                <h3>
+                    <?= $spotlight->title; ?>
+                </h3>
+                <?php if (isset($spotlight->illustrations[0])): ?>
+                <img
+                    src="<?=
+                        $this->displayImage(
+                            $spotlight->illustrations[0]->filename,
+                            Llv_Constant_File_Category::NEWS,
+                            300,
+                            9999
+                        );
+                        ?>"/>
+                <?php endif; ?>
+            </div>
+            <div class="right">
+                <p><?= $spotlight->content; ?></p>
+            </div>
         </div>
-        <div class="right">
-            <p><?= $spotlight->content; ?></p>
-        </div>
-    </div>
-</a>
-<?php endif; ?>
+    </a>
+    <?php endif; ?>
 
-<?php if (count($news) > 0): ?>
-<div class="news">
-    <ul>
-        <?php foreach ($news as $newsItem): ?>
-        <?php $i++; ?>
-        <a href="<?= $this->baseUrl(); ?>news/read/id/<?= $newsItem->id; ?>">
-            <li<?php if ($i % 3 == 0): ?> class="no-space"<?php endif; ?>>
-                <div class="left">
-                    <h3>
-                        <?= $newsItem->title; ?>
-                    </h3>
-                </div>
-                <div class="right">
-                    <p><?= $newsItem->content; ?></p>
-                </div>
-            </li>
-        </a>
-        <?php endforeach; ?>
-    </ul>
-</div>
+    <?php if (count($news) > 0): ?>
+    <div class="news">
+        <ul>
+            <?php foreach ($news as $newsItem): ?>
+            <?php $i++; ?>
+            <a href="<?= $this->baseUrl(); ?>news/read/id/<?= $newsItem->id; ?>">
+                <li<?php if ($i % 3 == 0): ?> class="no-space"<?php endif; ?>>
+                    <div class="left">
+                        <h3>
+                            <?= $newsItem->title; ?>
+                        </h3>
+                    </div>
+                    <div class="right">
+                        <p><?= $newsItem->content; ?></p>
+                    </div>
+                </li>
+            </a>
+            <?php endforeach; ?>
+        </ul>
+    </div>
+    <?php endif; ?>
+<?php else: ?>
+<p class='no-result'><?= _('NEWS_LIST_NORESULT'); ?></p>
 <?php endif; ?>
