Page de contact front

--- a/application/modules/back/layouts/scripts/layout.phtml
+++ b/application/modules/back/layouts/scripts/layout.phtml
@@ -84,7 +84,7 @@ $this->headScript()->appendFile($this->baseUrl() . 'design/' . $module . '/defau
     </div>
 </div>
 <script type="text/javascript">
-    var i18n = <?= $this->giveJsI18nText();?>;
+    var i18n = <?= $this->giveJsI18nText('back');?>;
 </script>
 
 </body>
