--- a/public/design/default/default/_common/css/form.css
+++ b/public/design/default/default/_common/css/form.css
@@ -5,10 +5,21 @@ form p {
 
 form label {
     display: inline-block;
-    width: 13%;
     margin-right: 2%;
     overflow: hidden;
     font-weight: bold;
+}
+
+/* •••••••••••••••••••••••••••••••••• */
+
+form fieldset legend {
+    font-size: 1.6em;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
+    width: 96%;
+    padding: 10px 2%;
+    background-color: #C0C2AB;
+    font-family: 'HelveticaNeueLight';
 }
 
 /* •••••••••••••••••••••••••••••••••• */
@@ -18,13 +29,17 @@ form input[type=password] {
     border: 1px solid #999;
     padding: 4px;
     box-shadow: 0 0 2px #bbb;
-    width: 753px;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
 form textarea {
     width: 100%;
     min-height: 300px;
+    font-family: 'Helvetica Neue', 'Arial', 'sans-serif';
+    font-size: 1em;
+    border: 1px solid #999;
+    padding: 4px;
+    box-shadow: 0 0 2px #bbb;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
@@ -34,17 +49,13 @@ form p.submit_element {
 }
 
 form input[type=submit] {
-    border: 1px solid #999;
     border-radius: 5px;
-    background-color: #ddd;
     padding: 4px;
     box-shadow: 0 0 2px #bbb;
 }
 
 form input[type=submit]:hover {
-    background-color: #eee;
     cursor: pointer;
-    border: 1px solid #aaa;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
